<resources>
    <string name="app_name">Catetin Aja</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Beranda</string>
    <string name="menu_pemasukan">Pemasukan Hari Ini</string>
    <string name="menu_pengeluaran">Pengeluaran Hari Ini</string>
    <string name="saldo">Saldo Hari Ini</string>
    <string name="tanggal">Tanggal</string>
    <string name="menu_laporan">Laporan</string>
    <string name="description">Keterangan</string>
    <string name="nominal">Nominal</string>
    <string name="tambah_data">TAMBAH DATA</string>
    <string name="profile_menu">Akun</string>
    <string name="refresh">Refresh</string>

    <!--login && regis-->
    <string name="pass">Kata Sandi</string>
    <string name="login_button">Masuk</string>
    <string name="regis_title">PENDAFTARAN</string>
    <string name="email">Email</string>
    <string name="confPass">Konfirmasi Kata Sandi</string>
    <string name="signup_button">Daftar</string>
    <string name="login_title">MASUK</string>
    <string name="username">Nama Pengguna</string>

    <!--category-->
    <string name="form_input">FORM KATEGORI</string>
    <string-array name="Spinner_items">
        <item>Pemasukan</item>
        <item>Pengeluaran</item>
    </string-array>
    <string name="save">Simpan</string>
    <string name="update">Ubah</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="tipe_kategori">Tipe Kategori</string>
    <string-array name="kategori_items">
        <item>Makan</item>
        <item>Transportasi</item>
        <item>Gaji</item>
        <item>Tagihan</item>
        <item>Asuransi</item>
        <item>Kesehatan</item>
        <item>Pajak</item>
        <item>Pendidikan</item>
        <item>Bonus</item>
        <item>Lain-lain</item>
    </string-array>

    <!--bottom navigation view-->
    <string name="dashboardbtn">Beranda</string>
    <string name="categorybtn">Kategori</string>
    <string name="reportbtn">Laporan</string>

    <!--main menu-->
    <string name="myprofile">Profil Saya</string>
    <string name="logout">Keluar</string>

    <!--dashboard-->
    <string name="balance">Saldo</string>
    <string name="date">Tanggal</string>
    <string name="income">Pemasukan</string>
    <string name="expense">Pengeluaran</string>

    <!--Laporan-->
    <string name="startdate">Tanggal mulai</string>
    <string name="enddate">Tanggal Selesai</string>
    <string name="totalincome">Total Pemasukan</string>
    <string name="totalexpense">Total Pengeluaran</string>
    <string name="difference">Selisih</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>