<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_minimal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/blue_700"
                android:textColorHint="@color/blue_700"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="14dp"
                android:hint="@string/startdate" />

            <Button
                android:drawableRight="@drawable/ic_calendar_white"
                android:id="@+id/btn_minimal"
                android:layout_width="40dp"
                android:paddingEnd="9dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_maximal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/blue_700"
                android:textColorHint="@color/blue_700"
                android:textSize="14dp"
                android:gravity="center"
                android:textAlignment="gravity"
                android:hint="@string/enddate" />

            <Button
                android:drawableRight="@drawable/ic_calendar_white"
                android:id="@+id/btn_maximal"
                android:layout_width="40dp"
                android:paddingEnd="9dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            android:layout_marginStart="10dp"
            android:id="@+id/cari"
            android:layout_marginEnd="15dp"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingEnd="9dp"
            android:enabled="false"
            android:drawableRight="@drawable/ic_baseline_search_24"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_kategori_laporan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        android:backgroundTint="@color/brown"
        android:orientation="vertical">

<!--///////////////-->


<!--        /////////////////////////////-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_acc"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="5dp"
                    android:text="@string/totalincome"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="5dp"
                    android:text="@string/totalexpense"
                    android:textColor="@color/red"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="5dp"
                    android:text="@string/difference"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_acc"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/total_pemasukan"
                    android:layout_width="138dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="Rp0"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_pengeluaran"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="Rp0"
                    android:textAlignment="gravity"
                    android:textColor="@color/red"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/selisih"
                    android:layout_width="138dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="Rp0"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_view_laporan"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>